# ColonySimulator

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  run.sh
include/: Drawing.hpp  Human.hpp  Island.hpp  Json.hpp  Pathfinding.hpp  Perlin.hpp  Progress.hpp  Settings.hpp  Ship.hpp  UI.hpp  Utils.hpp
include/Drawing/: GameMenu.hpp
resources/: CREDITS.md  Island.fs  Perlin.fs
resources/languages/: en.txt  pl.txt
resources/shaders/: Perlin.fs
src/: Drawing.cpp  Human.cpp  Island.cpp  Json.cpp  Languages.cpp  Pathfinding.cpp  Perlin.cpp  Progress.cpp  Settings.cpp  Ship.cpp  UI.cpp  main.cpp
src/Drawing/: GameMenu.cpp
